overlap fix please

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@ nav {
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 2;
 }
 
 nav a {
@@ -59,7 +58,7 @@ section {
 }
 
 audio {
-  z-index: 1;
+  z-index: -1;
 }
 
 .subheading {
